2006-04-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Work around the bug of
	dbstate.active not being updated when the active person was edited.
	* src/DisplayTabs.py (EventEmbedList.edit_button_clicked): Fix params
	of EditEventRef call

2006-03-31  Don Allingham  <don@gramps-project.org>
	* src/ManagedWindow.py: added
	* src/DisplayState.py: break out managed window stuff
	* src/Editors/_EditPrimary.py: use ManagedWindow
	* src/Editors/_EditSecondary.py: use ManagedWindow
	* src/Editors/_EditReference.py: use ManagedWindow
	* src/ObjectSelector/_ObjectSelectorWindow.py: use ManagedWindow
	* src/PluginUtils/_Plugins.py: use ManagedWindow
	* src/GrampsDb/_GrampsDbBase.py: handle saving of custom 
	attributes and event types for use in menus
	* src/Editors/_EditAttribute.py: support for family vs. person
	* src/Editors/_EditEventRef.py: support for family vs. person
	* src/Editors/_EditEvent.py: support for family vs. person
	* src/DisplayTabs: support for family vs. person attributes/events
	* src/GrampsWidgets.py: initialize type value properly
	* src/GrampsDb/_WriteGedcom.py: fix lds calls
	* src/lds.py: restore baptism status values
	* src/Editors/_EditPrimary.py: check for empty objects
	* src/Editors/_EditPlace.py: check for empty objects
	* src/Editors/_EditSource.py: check for empty objects
	* src/Editors/_EditPerson.py: check for empty objects
	* src/Editors/_EditRepository.py: check for empty objects
	* src/Editors/_EditMedia.py: check for empty objects
	* src/Editors/_EditEvent.py: check for empty objects
	* src/RelLib/_DateBase.py: fix handling of empty dates on 
	serialize/unserialize

2006-03-30  Don Allingham  <don@gramps-project.org>
	* various: convert get_birth_handle()/get_death_handle() to ref
	calls

2006-03-30  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/GraphViz.py: import const
	* src/plugins/DecendReport.py: use full dates instead of just year.